--- a/Frontend/frontend/.env
+++ b/Frontend/frontend/.env
@@ -1,1 +1,2 @@
 REACT_APP_WEATHER_API_KEY='7d2901dac7msh47ebecaf29299adp1011b5jsnfdad0472a078'
+REACT_APP_GEMINI_API_KEY='AIzaSyAb9Ixx4c7Dc_5lwV3blsUUv1wMx4iKya0'
